production/litellm/resources/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: litellm-timeout
  namespace: litellm
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: litellm
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: litellm-clusters-zju-edu-cn
  timeout:
    http:
      requestTimeout: 0s
